[gd_scene load_steps=19 format=3 uid="uid://dd8msug6i2iqf"]

[ext_resource type="Script" uid="uid://c5bfcrpyb2dy6" path="res://scripts/combat_scene.gd" id="1_m17q1"]
[ext_resource type="Script" uid="uid://cj82krnmf41mi" path="res://scenes/event_queue.gd" id="2_ikfks"]
[ext_resource type="Script" path="res://scripts/menu_APRIL_2025.gd" id="2_m2d54"]
[ext_resource type="PackedScene" path="res://scenes/enemy.tscn" id="3_m2d54"]
[ext_resource type="PackedScene" path="res://scenes/player_windows.tscn" id="4_ikfks"]
[ext_resource type="Texture2D" uid="uid://v13irlhan77m" path="res://assets/sprites/Greed.png" id="5_5qq3q"]
[ext_resource type="Texture2D" uid="uid://ipfmgv7t0bxj" path="res://assets/sprites/Envy.png" id="6_g5ebj"]
[ext_resource type="Resource" uid="uid://bglyqhdsjqn58" path="res://Enemies/enemy1.tres" id="6_ikfks"]
[ext_resource type="Texture2D" uid="uid://dwwehetve3kdo" path="res://assets/sprites/Sloth.png" id="7_ohwxf"]
[ext_resource type="Texture2D" uid="uid://c5qe3jwpso435" path="res://assets/sprites/Wrath.png" id="8_blj0x"]
[ext_resource type="Texture2D" uid="uid://8thvk5v8gc6p" path="res://assets/sprites/Gluttony.png" id="9_6r8bj"]
[ext_resource type="Texture2D" uid="uid://bo5mmrver0f8a" path="res://assets/sprites/Lust(masquerade).png" id="10_da1ml"]
[ext_resource type="Texture2D" uid="uid://c0v4qvvgdsqs3" path="res://assets/sprites/pride_mask.png" id="11_lef5q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_aepks"]
atlas = ExtResource("11_lef5q")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ff51q"]
atlas = ExtResource("11_lef5q")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcf8m"]
atlas = ExtResource("11_lef5q")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dobui"]
atlas = ExtResource("11_lef5q")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cto7h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aepks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ff51q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcf8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dobui")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Battle Scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m17q1")

[node name="EventQueue" type="Node" parent="."]
script = ExtResource("2_ikfks")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2

[node name="Options" type="PanelContainer" parent="MarginContainer" node_paths=PackedStringArray("buttons_container")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("2_m2d54")
buttons_container = NodePath("VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Options"]
layout_mode = 2

[node name="Fight" type="Button" parent="MarginContainer/Options/VBoxContainer"]
layout_mode = 2
text = "Fight"

[node name="Mask" type="Button" parent="MarginContainer/Options/VBoxContainer"]
layout_mode = 2
text = "Mask
"

[node name="Magic" type="Button" parent="MarginContainer/Options/VBoxContainer"]
layout_mode = 2
text = "Magic
"

[node name="Run" type="Button" parent="MarginContainer/Options/VBoxContainer"]
layout_mode = 2
text = "Run
"

[node name="PlayerWindows" parent="MarginContainer" instance=ExtResource("4_ikfks")]
layout_mode = 2
size_flags_horizontal = 0

[node name="MaskMenu" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="TextureButton" type="TextureButton" parent="MarginContainer/MaskMenu"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("5_5qq3q")

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/MaskMenu"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("6_g5ebj")

[node name="TextureButton3" type="TextureButton" parent="MarginContainer/MaskMenu"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("7_ohwxf")

[node name="TextureButton4" type="TextureButton" parent="MarginContainer/MaskMenu"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("8_blj0x")

[node name="TextureButton5" type="TextureButton" parent="MarginContainer/MaskMenu"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("9_6r8bj")

[node name="TextureButton6" type="TextureButton" parent="MarginContainer/MaskMenu"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("10_da1ml")

[node name="TextureButton7" type="TextureButton" parent="MarginContainer/MaskMenu"]
layout_mode = 2
size_flags_horizontal = 0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MarginContainer/MaskMenu/TextureButton7"]
position = Vector2(15.799995, 3.2000122)
sprite_frames = SubResource("SpriteFrames_cto7h")

[node name="Enemies" type="HBoxContainer" parent="." node_paths=PackedStringArray("buttons_container")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_m2d54")
buttons_container = NodePath(".")

[node name="Enemy" parent="Enemies" instance=ExtResource("3_m2d54")]
layout_mode = 2
data = ExtResource("6_ikfks")

[connection signal="button_pressed" from="MarginContainer/Options" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/Options/VBoxContainer/Fight" to="." method="_on_fight_pressed"]
[connection signal="pressed" from="MarginContainer/Options/VBoxContainer/Mask" to="." method="_on_mask_pressed"]
[connection signal="pressed" from="MarginContainer/Options/VBoxContainer/Magic" to="." method="_on_magic_pressed"]
[connection signal="pressed" from="MarginContainer/Options/VBoxContainer/Run" to="." method="_on_run_pressed"]
[connection signal="button_pressed" from="Enemies" to="." method="_on_enemies_button_pressed"]
